--- a/css/style.css
+++ b/css/style.css
@@ -31,6 +31,7 @@ header {
   top: 0;
   left: 0;
   width: 100%;
+  z-index: 100;
 }
 
 header ul {
@@ -46,11 +47,63 @@ header ul li a:hover {
   font-weight: 800;
 }
 
+header label {
+  cursor: pointer;
+}
+
+/* 로그인&회원가입 영역 */
+input[name="header"] {
+  display: none;
+}
+
+.modal {
+  display: none;
+  justify-content: center;
+  background-color: rgb(0, 0, 0, 0.7);
+}
+
+.modal_body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  background-color: white;
+  width: 500px;
+  height: 600px;
+  margin-top: 100px;
+  border-radius: 20px;
+  text-align: center;
+}
+
+.input {
+  width: 300px;
+  padding: 10px 10px;
+  border-radius: 10px;
+  border: 1px black solid;
+  margin: 10px;
+}
+
+.modal_body button {
+  margin: 10px;
+}
+
+#registerModal img {
+    width: 150px;
+}
+
+#login:checked ~ #loginModal,
+#register:checked ~ #registerModal {
+  display: flex;
+}
+
 /* Up comming 축제 영역 */
 input[name="slide"] {
   display: none;
 }
 
+.a {
+  z-index: 0;
+}
 .upComming {
   width: 1000px;
   height: 600px;
@@ -63,7 +116,6 @@ input[name="slide"] {
   position: relative;
   width: 100%;
   height: 100%;
-
 }
 
 .slide > img {
@@ -146,22 +198,22 @@ input[name="slide"] {
   76.66%,
   100% {
     transform: translateX(-100%);
-}
+  }
 }
 
 #slide1:checked ~ .slide {
-    transform: translateX(0);
-    animation: slide1 9s infinite;
+  transform: translateX(0);
+  animation: slide1 9s infinite;
 }
 
 #slide2:checked ~ .slide {
-    transform: translateX(-100%);
-    animation: slide2 9s infinite;
+  transform: translateX(-100%);
+  animation: slide2 9s infinite;
 }
 
 #slide3:checked ~ .slide {
-    transform: translateX(-200%);
-    animation: slide3 9s infinite;
+  transform: translateX(-200%);
+  animation: slide3 9s infinite;
 }
 
 /* 푸터 영역 */
