회원가입 기능 구현 캡차 이미지 생성 및 PW 암호화 저장

--- a/css/style.css
+++ b/css/style.css
@@ -154,6 +154,8 @@ input[name="slide"] {
   display: flex;
   overflow: hidden;
   margin: 0 auto;
+  text-align: center;
+  flex-direction: column;
 }
 
 .slide {
@@ -461,4 +463,9 @@ footer > p {
 .footer_SNS {
   width: 50px;
   border-radius: 10px;
+}
+
+#captcha_img {
+  width: 100px;
+  height: 100px;
 }
