--- a/css/style.css
+++ b/css/style.css
@@ -469,3 +469,19 @@ footer > p {
   width: 100px;
   height: 100px;
 }
+
+/* 마이페이지 영역 */
+.mypage {
+  text-align: center;
+}
+
+.mypage table {
+  margin: 0 auto;
+  margin-top: 30px;
+}
+
+.mypage table th,
+.mypage table td {
+  border-bottom: 1px black solid;
+  padding: 20px;
+}
